# beads-acp

./: .gitignore
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  dolt-configmap.yaml  dolt-service.yaml  dolt-statefulset.yaml  mcp-deployment.yaml  mcp-service.yaml  networkpolicy.yaml  route.yaml  secrets.yaml  serviceaccount.yaml
chart/templates/tests/: test-connection.yaml
docs/plans/: 2026-05-21-001-feat-beads-acp-helm-chart-plan.md
docs/superpowers/specs/: 2026-05-21-beads-acp-design.md
e2e/: dashboard.py  deploy.py  mcp_client.py  metrics.py  pyproject.toml  report.py  run.py  scenarios.py  values-e2e.yaml
images/beads-mcp/: Containerfile
images/dolt-server/: Containerfile
